<resources>
    <string name="app_name">202bpm</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="naver_oauth_client_id">id</string>
    <string name="naver_oauth_client_secret">secret</string>
    <string name="naver_oauth_client_name">name</string>

    <string name="splash_text">202bpm\n스플래시 스크린\nClick!</string>

    <string name="email_input_hint">이메일을 입력해주세요.</string>
    <string name="code_input_hint">코드를 입력해주세요.</string>
    <string name="password_input_hint">비밀번호를 입력해주세요.</string>
    <string name="password_comp_input_hint">비밀번호를 확인해주세요.</string>

    <!-- main menu string -->
    <string name="menu_exercise">운동</string>
    <string name="menu_history">기록</string>
    <string name="menu_schedules">일정</string>
    <string name="menu_setting">설정</string>
    

    <!-- title -->
    <string name="title_find_pw">비밀번호 찾기</string>
    <string name="title_sign_up">회원가입</string>
    <string name="title_term">약관동의</string>
    <string name="title_main">@string/app_name</string>
    <string name="title_setting">설정</string>
    <string name="title_select_photo">사진 선택</string>
    <string name="title_location_select">지역 선택</string>
    <string name="title_account">계정관리</string>
    <string name="title_change_pw">비밀번호 변경</string>
    <string name="title_schedules">일정</string>
    <string name="title_schedules_modify">일정 수정</string>
    <string name="title_schedules_add">일정 추가</string>

    <!-- sign up -->
    <string name="email_sign_up_text">이메일 가입</string>
    <string name="sns_sign_up_text">SNS 가입</string>
    <string name="term_text">약관</string>
    <string name="terms_of_service">서비스 약관</string>
    <string name="privacy_policy">개인정보 보호정책</string>
    <string name="sign_in_button_text">로그인</string>
    <string name="sign_up_button_text">회원가입</string>
    <string name="sign_out_button_text">로그아웃</string>
    <string name="password_find_button_text">비밀번호 찾기</string>
    <string name="sign_up_complete">가입완료</string>
    <string name="sign_up_email_code_confirm">이메일 코드 확인</string>

    <string name="sign_up_nick">닉네임</string>
    <string name="sign_up_height">키</string>
    <string name="sign_up_weight">몸무게</string>
    <string name="sign_up_age">나이</string>
    <string name="sign_up_gender">성별</string>
    <string name="sign_up_location">지역</string>

    <string name="man">남자</string>
    <string name="woman">여자</string>

    <!-- change password -->
    <string name="email_text">이메일</string>
    <string name="change_password_text">비밀번호 변경</string>
    <string name="change_password_confirm_text">비밀번호 확인</string>

    <!-- schedules and play-->
    <string name="schedules_exercise">운동</string>
    <!--<string name="schedules_set">세트</string>-->
    <!--<string name="schedules_rest">휴식</string>-->
    <string name="schedules_weight">무게</string>
    <string name="schedules_kg">kg</string>
    <string name="schedules_rpm">rpm</string>
    <string name="schedules_rest">rest</string>
    <string name="schedules_set">set</string>
    <string name="schedules_count">count</string>
    <string name="schedules_times">times</string>
    <string name="play_select">SELECT</string>
    <string name="play_good">GOOD</string>
    <string name="play_great">GREAT</string>
    <string name="play_complete">COMPLETE</string>
    <string name="play_finish">GREAT\n오늘의 운동을 완료하였습니다.</string>
    <string name="play_start_by_pressed">버튼을 눌러서 시작</string>
    <string name="play_end_by_pressed">버튼을 눌러서 세트 종료</string>



    <!-- desc -->
    <string name="sign_up_nick_hint">닉네임을 입력해주세요.</string>
    <string name="sign_up_height_hint">키를 입력해 주세요.</string>
    <string name="sign_up_weight_hint">몸무게를 입력해 주세요.</string>
    <string name="sign_up_age_hint">나이를 입력해 주세요.</string>
    <string name="sign_up_gender_hint">성별을 선택해 주세요.</string>
    <string name="sign_up_location_hint">지역을 검색해 주세요.</string>



    <!-- popup -->
    <string name="popup_title_secession">회원탈퇴</string>
    <string name="popup_contents_secession">정말로 회원탈퇴 하시겠습니까?</string>


    <!-- button -->
    <string name="button_next_text">다음</string>
    <string name="button_search_text">검색</string>
    <string name="button_duplicate_text">중복 확인</string>
    <string name="button_confirm_text">확인</string>
    <string name="button_add_text">추가</string>
    <string name="button_delete_text">삭제</string>
    <string name="button_select_text">선택</string>
    <string name="button_cancel_text">취소</string>
    <string name="button_start_exercise">운동시작</string>
    <string name="button_modify">수정</string>
    <string name="button_edit">편집</string>
    <string name="button_bluetooth">블루투스</string>
    <string name="button_complete">완료</string>
    <string name="button_schedules_modify">일정 수정</string>








</resources>
