<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/streakColorPrimary"
        android:weightSum="10">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:gravity="center"
            android:text="202bpm"
            android:textColor="@color/textColor"
            android:textSize="50dp"/>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5">

            <ImageView
                android:id="@+id/iv_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                app:layout_constraintBottom_toBottomOf="@+id/et_email"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/et_email"
                app:srcCompat="@drawable/ic_email" />

            <ImageView
                android:id="@+id/iv_pw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                app:layout_constraintBottom_toBottomOf="@+id/et_pw"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/et_pw"
                app:srcCompat="@drawable/ic_key" />

            <EditText
                android:id="@+id/et_email"
                style="@style/et_login_input"
                android:layout_width="0dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/email_input_hint"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_email"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/et_pw"
                style="@style/et_login_input"
                android:layout_width="0dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/password_input_hint"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_pw"
                app:layout_constraintTop_toBottomOf="@+id/et_email" />

            <Button
                android:id="@+id/login_btn"
                style="@style/main_button_style"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/sign_in_button_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_pw" />

            <Button
                android:id="@+id/sign_btn"
                style="@style/main_button_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/sign_up_button_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_btn" />

            <ImageButton
                android:id="@+id/google_sign_btn"
                style="@style/ibtn_google"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sign_btn" />

            <ImageButton
                android:id="@+id/kakao_sign_btn"
                style="@style/ibtn_kakao"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toEndOf="@+id/naver_sign_btn"
                app:layout_constraintTop_toBottomOf="@+id/sign_btn" />

            <ImageButton
                android:id="@+id/naver_sign_btn"
                style="@style/ibtn_naver"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toEndOf="@+id/google_sign_btn"
                app:layout_constraintTop_toBottomOf="@+id/sign_btn" />

            <TextView
                android:id="@+id/tv_find_pw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/ripple_effect_find_pw"
                android:padding="8dp"
                android:fontFamily="@font/nanum_font_family"
                android:textStyle="bold"
                android:text="@string/password_find_button_text"
                android:textColor="@color/textColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/google_sign_btn" />

        </android.support.constraint.ConstraintLayout>
    </LinearLayout>
</layout>